📦 Use large project architecture

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
 # Directory to change to before starting a build.
 # This is where we will look for package.json/.nvmrc/etc.
-base = "."
+base = "projects/book/"
 
 # Default build command.
 command = "npm install && vuepress build docs"
