--- a/projects/prover/Cargo.toml
+++ b/projects/prover/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 
 [dependencies]
 num = "0.4.1"
+serde = { version = "1.0.193", features = ["derive"] }
 anyhow = "1.0.75"
 
 [features]
