--- a/projects/prover/Cargo.toml
+++ b/projects/prover/Cargo.toml
@@ -5,7 +5,9 @@ version = "0.0.0"
 edition = "2021"
 
 [dependencies]
-num = "0.4.1"
+latexify = "0.1.0"
+num = { version = "0.4.1", features = ["serde"] }
+serde_json = "1.0.108"
 serde = { version = "1.0.193", features = ["derive"] }
 anyhow = "1.0.75"
 
