--- a/projects/prover/Cargo.toml
+++ b/projects/prover/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.0.0"
 edition = "2021"
 
 [dependencies]
+itertools = "0.12.0"
 latexify = "0.1.0"
 num = { version = "0.4.1", features = ["serde"] }
 serde_json = "1.0.108"
