--- a/projects/prover/Cargo.toml
+++ b/projects/prover/Cargo.toml
@@ -5,6 +5,8 @@ version = "0.0.0"
 edition = "2021"
 
 [dependencies]
+ndarray = "0.15.6"
+nalgebra = "0.32.3"
 ordered-float = "4.2.0"
 itertools = "0.12.0"
 latexify = "0.1.0"
