--- a/projects/book/package.json
+++ b/projects/book/package.json
@@ -9,6 +9,8 @@
     },
     "dependencies": {
         "@vuepress/plugin-shiki": "^2.0.0-rc.0",
+        "markdown-it": "^14.0.0",
+        "markdown-it-mathjax3": "^4.3.2",
         "vuepress": "^2.0.0-rc.0"
     }
 }
